vi-mode: fix yanking in visual block mode

REVIEW: 114220
BUG: 324695